--- a/HTML-&-CSS-January-2025/11-Exam Preparation/HTML & CSS Regular Exam - 18 Feb 2024/My Solution/03-Traveler/styles/style.css
+++ b/HTML-&-CSS-January-2025/11-Exam Preparation/HTML & CSS Regular Exam - 18 Feb 2024/My Solution/03-Traveler/styles/style.css
@@ -1,9 +1,9 @@
-@import url("/styles/reset.css");
-@import url("/styles/typography.css");
+@import url("reset.css");
+@import url("typography.css");
 
-@import url("/styles/navigation.css");
-@import url("/styles/site-header.css");
-@import url("/styles/sections.css");
-@import url("/styles/site-footer.css");
+@import url("navigation.css");
+@import url("site-header.css");
+@import url("sections.css");
+@import url("site-footer.css");
 
 /* lndex.html */
