--- a/ReactJS-February-2025/04-Workshop-Components/React-JS-User-List-Workshop/client/src/App.css
+++ b/ReactJS-February-2025/04-Workshop-Components/React-JS-User-List-Workshop/client/src/App.css
@@ -594,6 +594,18 @@ ul {
     }
 }
 
+.loading-shade {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    bottom: 0px;
+    right: 0;
+    z-index: 5;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 /* User details styles  */
 .detail-container {
     width: 100%;
